Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <h1>
 <a name="disguiser-swep" class="anchor" href="#disguiser-swep"><span class="octicon octicon-link"></span></a>Disguiser SWEP</h1>
 
+<p><a href="http://www.youtube.com/watch?v=IvMkNIm4Ro0&amp;feature=github"><img src="http://img.youtube.com/vi/IvMkNIm4Ro0/0.jpg" alt="YouTube: [gmod] Derping around with the Disguiser "></a></p>
+
 <p>So you always wanted to be able to disguise as another item on the map in Sandbox or
 any other game mode than Prop Hunt? You were always annoyed by how you were able to
 see yourself being able to rotate but without knowing you were still standing all the
